# django-app-enabler

./: .bumpversion.cfg  .codeclimate.yml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  cms_helper.py  helper.py  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  test.yml
app_enabler/: __init__.py  __main__.py  cli.py  django.py  enable.py  errors.py  install.py  main.py  patcher.py
changes/: 1.feature  103.bugfix  11.feature  15.feature  17.bugfix  19.bugfix  20.feature  21.bugfix  25.bugfix  32.feature  5.feature  56.feature  58.feature  64.bugfix  84.bugfix  9.feature
docs/: Makefile  addon_configuration.rst  conf.py  index.rst  installation.rst  limitations.rst  todo.rst  usage.rst
docs/api/: index.rst  models.rst  settings.rst  views.rst
tests/: conftest.py  test_cli.py  test_django.py  test_enable.py  test_install.py  test_patcher.py  utils.py
tests/sample/config/: 1.json  2.json
tests/sample/test_project/: settings.py  urls.py
