[bumpversion]
current_version = 0.2.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
	{major}.{minor}.{patch}.{release}{relver}
	{major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
	dev
	a
	b
	rc
	gamma

[bumpversion:file:app_enabler/__init__.py]

[metadata]
name = django-app-enabler
version = attr: app_enabler.__version__
url = https://github.com/nephila/django-app-enabler
project_urls =
	Documentation = https://django-app-enabler.readthedocs.io/
author = Nephila
author_email = info@nephila.it
description = Autoconfigurator for django applications
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
	Development Status :: 4 - Beta
	Framework :: Django
	Intended Audience :: Developers
	Natural Language :: English
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
include_package_data = True
install_requires =
	astor
	click
setup_requires =
	setuptools
packages = app_enabler
python_requires = >=3.6
test_suite = pytest
zip_safe = False

[options.package_data]
* = *.txt, *.rst
app_enabler = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
	django<3.1

[options.entry_points]
console_scripts =
	django-enabler = app_enabler.__main__:execute

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
