[metadata]
name = django-app-enabler
version = attr: app_enabler.__version__
url = https://github.com/nephila/django-app-enabler
project_urls =
	Documentation = https://django-app-enabler.readthedocs.io/
author = Nephila
author_email = info@nephila.it
description = Autoconfigurator for django applications
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_files = LICENSE
classifiers =
	Development Status :: 4 - Beta
	Framework :: Django
	Intended Audience :: Developers
	Natural Language :: English
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
	astor
	click
setup_requires =
	setuptools
packages = app_enabler
python_requires = >=3.8
test_suite = pytest
zip_safe = False

[options.package_data]
* = *.txt, *.rst
app_enabler = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
	django<5.0
    sphinx-click

[options.entry_points]
console_scripts =
	django-enabler = app_enabler.__main__:execute

[sdist]
formats = zip

[bdist_wheel]
universal = 1
